--- a/windows-file-server/templates/fsx-windows-od-workshop.yaml
+++ b/windows-file-server/templates/fsx-windows-od-workshop.yaml
@@ -300,7 +300,7 @@ Resources:
 
             # install DiskSpd (windows)
             $path = "C:\Tools\DiskSpd-2.0.21a"
-            $url = "https://gallery.technet.microsoft.com/DiskSpd-A-Robust-Storage-6ef84e62/file/199535/2/DiskSpd-2.0.21a.zip"
+            $url = "https://github.com/microsoft/diskspd/releases/download/v2.0.21a/DiskSpd.zip"
             $destination = "C:\Tools\DiskSpd-2.0.21a.zip"
             $download = New-Object -Typename System.Net.WebClient
             New-Item -Type Directory -Path $path
@@ -492,7 +492,7 @@ Resources:
         S3Bucket: !Sub solution-references-${AWS::Region}
         S3Key: fsx/dfs/ActiveDirectoryCustomResource.zip
       Handler: ad.handler
-      Runtime: nodejs12.x
+      Runtime: nodejs14.x
       Timeout: 30
       Role: !GetAtt LambdaExecutionRole.Arn
   ActiveDirectory:
@@ -509,7 +509,7 @@ Resources:
         S3Bucket: !Sub solution-references-${AWS::Region}
         S3Key: fsx/amilookup-lin.zip
       Handler: amilookup-lin.handler
-      Runtime: nodejs12.x
+      Runtime: nodejs14.x
       Timeout: 30
       Role: !GetAtt LambdaExecutionRole.Arn
   WindowsAmiInfoFunction:
@@ -520,7 +520,7 @@ Resources:
         S3Bucket: !Sub solution-references-${AWS::Region}
         S3Key: fsx/dfs/amilookup-win.zip
       Handler: amilookup-win.handler
-      Runtime: nodejs12.x
+      Runtime: nodejs14.x
       Timeout: 30
       Role: !GetAtt LambdaExecutionRole.Arn
   LinuxAmiInfo:
