--- a/windows-file-server/templates/fsx-windows-od-workshop.yaml
+++ b/windows-file-server/templates/fsx-windows-od-workshop.yaml
@@ -37,13 +37,19 @@ Parameters:
   KeyPair:
     Type: AWS::EC2::KeyPair::KeyName
   VpcCidr:
-    AllowedValues: 
+    AllowedValues:
     - 10.0.0.0/16
     - 173.31.0.0/16
     - 192.168.0.0/16
     Default: 10.0.0.0/16
     Description: Select the private IPv4 CIDR for the VPC.
     Type: String
+  LatestLinuxAmiId:
+    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
+    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
+  LatestWindowsAmiId:
+    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
+    Default: '/aws/service/ami-windows-latest/Windows_Server-2016-English-Full-Base'
 
 Resources:
   AttachInternetGateway:
@@ -56,7 +62,7 @@ Resources:
     Properties:
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'VPC IGW | ', !Ref 'AWS::StackName' ] ]     
+          Value: !Join [ '', [ 'VPC IGW | ', !Ref 'AWS::StackName' ] ]
   PrivateRouteTable0:
     Type: AWS::EC2::RouteTable
     Properties:
@@ -181,12 +187,12 @@ Resources:
           CidrIp: 0.0.0.0/0
       Tags:
         - Key: Name
-          Value: "Windows security group" 
+          Value: "Windows security group"
       VpcId:
         !Ref Vpc
   ClientSecurityGroupIngress:
     Type: AWS::EC2::SecurityGroupIngress
-    Properties: 
+    Properties:
       GroupId: !Ref ClientSecurityGroup
       IpProtocol: -1
       SourceSecurityGroupId: !Ref ClientSecurityGroup
@@ -205,28 +211,28 @@ Resources:
           SourceSecurityGroupId: !Ref ClientSecurityGroup
       Tags:
         - Key: Name
-          Value: "File system security group"     
+          Value: "File system security group"
       VpcId:
         !Ref Vpc
   FileSystemSecurityGroupIngress:
     Type: AWS::EC2::SecurityGroupIngress
-    Properties: 
+    Properties:
       GroupId: !Ref FileSystemSecurityGroup
       IpProtocol: -1
       SourceSecurityGroupId: !Ref FileSystemSecurityGroup
 
-  Directory: 
+  Directory:
     DependsOn: Password
     Type: AWS::DirectoryService::MicrosoftAD
-    Properties: 
+    Properties:
       Edition: Standard
       Name: example.com
       Password: !Join ['', ['{{resolve:secretsmanager:', !Ref Password, ':SecretString:password}}' ]]
-      VpcSettings: 
-        SubnetIds: 
+      VpcSettings:
+        SubnetIds:
           - !Ref PublicSubnet0
           - !Ref PublicSubnet1
-        VpcId: 
+        VpcId:
           !Ref Vpc
   Password:
     Type: AWS::SecretsManager::Secret
@@ -235,15 +241,15 @@ Resources:
         SecretStringTemplate: !Sub '{"username": "admin@example.com"}'
         GenerateStringKey: password
         PasswordLength: 32
-        ExcludeCharacters: '"@/\'
+        ExcludePunctuation: true
   DhcpOptions:
     Type: AWS::EC2::DHCPOptions
-    Properties: 
+    Properties:
       DomainName: example.com
       DomainNameServers: !GetAtt Directory.DnsIpAddresses
   DhcpOptionsAssociation:
     Type: AWS::EC2::VPCDHCPOptionsAssociation
-    Properties: 
+    Properties:
       DhcpOptionsId: !Ref DhcpOptions
       VpcId: !Ref Vpc
 
@@ -272,11 +278,11 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       IamInstanceProfile: !Ref InstanceProfile
-      ImageId: !GetAtt WindowsAmiInfo.Id
+      ImageId: !Ref LatestWindowsAmiId
       InstanceType: !Ref InstanceType
       KeyName: !Ref KeyPair
       Monitoring: true
-      SecurityGroupIds: 
+      SecurityGroupIds:
         - !Ref ClientSecurityGroup
       SubnetId: !Ref PublicSubnet0
       Tags:
@@ -300,7 +306,7 @@ Resources:
 
             # install DiskSpd (windows)
             $path = "C:\Tools\DiskSpd-2.0.21a"
-            $url = "https://github.com/microsoft/diskspd/releases/download/v2.0.21a/DiskSpd.zip"
+            $url = "https://gallery.technet.microsoft.com/DiskSpd-A-Robust-Storage-6ef84e62/file/199535/2/DiskSpd-2.0.21a.zip"
             $destination = "C:\Tools\DiskSpd-2.0.21a.zip"
             $download = New-Object -Typename System.Net.WebClient
             New-Item -Type Directory -Path $path
@@ -315,11 +321,11 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       IamInstanceProfile: !Ref InstanceProfile
-      ImageId: !GetAtt LinuxAmiInfo.Id
+      ImageId: !Ref LatestLinuxAmiId
       InstanceType: !Ref InstanceType
       KeyName: !Ref KeyPair
       Monitoring: true
-      SecurityGroupIds: 
+      SecurityGroupIds:
         - !Ref ClientSecurityGroup
       SubnetId: !Ref PublicSubnet0
       Tags:
@@ -415,7 +421,7 @@ Resources:
         directoryName: [!GetAtt ActiveDirectory.Name]
         dnsIpAddresses:
         - !Select [ 0, !GetAtt ActiveDirectory.DnsIpAddrs ]
-        - !Select [ 1, !GetAtt ActiveDirectory.DnsIpAddrs ]        
+        - !Select [ 1, !GetAtt ActiveDirectory.DnsIpAddrs ]
       Targets:
       - Key: InstanceIds
         Values: [ !Ref Instance0 ]
@@ -502,37 +508,3 @@ Resources:
       ServiceToken: !GetAtt ActiveDirectoryFunction.Arn
       Region: !Ref 'AWS::Region'
       ID: !Ref Directory
-  LinuxAmiInfoFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      Code:
-        S3Bucket: !Sub solution-references-${AWS::Region}
-        S3Key: fsx/amilookup-lin.zip
-      Handler: amilookup-lin.handler
-      Runtime: nodejs14.x
-      Timeout: 30
-      Role: !GetAtt LambdaExecutionRole.Arn
-  WindowsAmiInfoFunction:
-    DependsOn: Directory
-    Type: AWS::Lambda::Function
-    Properties:
-      Code:
-        S3Bucket: !Sub solution-references-${AWS::Region}
-        S3Key: fsx/dfs/amilookup-win.zip
-      Handler: amilookup-win.handler
-      Runtime: nodejs14.x
-      Timeout: 30
-      Role: !GetAtt LambdaExecutionRole.Arn
-  LinuxAmiInfo:
-    Type: Custom::LinuxAmiInfo
-    Properties:
-      ServiceToken: !GetAtt LinuxAmiInfoFunction.Arn
-      Region: !Ref 'AWS::Region'
-      OSName: Amazon Linux 2 (x86_64)
-  WindowsAmiInfo:
-    DependsOn: Directory
-    Type: Custom::WindowsAmiInfo
-    Properties:
-      ServiceToken: !GetAtt WindowsAmiInfoFunction.Arn
-      Region: !Ref 'AWS::Region'
-      OSName: Windows Server 2019 English 64-bit
